Fix pg-dropdown - margin on mobile

--- a/src/pg.css
+++ b/src/pg.css
@@ -78,6 +78,10 @@ html, body {
     .pg-dropdown .content .item[class*="margin-"] {
         margin-left: 0;
     }
+
+    .pg-dropdown .content {
+        margin-left: -0.5rem;
+    }
 }
 
 
@@ -202,7 +206,6 @@ html, body {
     visibility: hidden;
     min-width: 5rem;
     margin-top: 0.5rem;
-    margin-left: -0.5rem;
     background-color: white;
     opacity: 0;
     transition: 0.2s;
